[gd_scene load_steps=11 format=3 uid="uid://m882op0f8k67"]

[ext_resource type="Theme" uid="uid://clhad2uurm8i7" path="res://assets/UI_Theme.tres" id="1_nir4x"]
[ext_resource type="Script" uid="uid://dgp6oa7erw88k" path="res://scr/UI/ui_show_ring.gd" id="2_xf14j"]
[ext_resource type="Script" uid="uid://360de8v1myh" path="res://scr/UI/player_ring.gd" id="3_b4pga"]
[ext_resource type="PackedScene" uid="uid://b58hqaayna508" path="res://scr/UI/ui_actor_data.tscn" id="3_gu38d"]
[ext_resource type="Texture2D" uid="uid://ek5yx2s3pa8c" path="res://assets/Menu Buttons/Menu Buttons sprite (BnW).png" id="3_ms247"]

[sub_resource type="LabelSettings" id="LabelSettings_ms247"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_nd284"]
font_size = 18

[sub_resource type="GDScript" id="GDScript_6vf1o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xf14j"]
texture = ExtResource("3_ms247")
texture_margin_top = 9.63859
region_rect = Rect2(818.133, 833.217, 201.254, 200.868)

[sub_resource type="Theme" id="Theme_nd284"]
Button/styles/normal = SubResource("StyleBoxTexture_xf14j")

[node name="UiShowRing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nir4x")
script = ExtResource("2_xf14j")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="character_status" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 154

[node name="actor_data" parent="MarginContainer/HBoxContainer/character_status" instance=ExtResource("3_gu38d")]
layout_mode = 2

[node name="ring_list" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ring_list"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer"]
custom_minimum_size = Vector2(833, 532)
layout_mode = 2

[node name="ring" type="GridContainer" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 127
theme_override_constants/v_separation = 50
columns = 3
script = ExtResource("3_b4pga")

[node name="ring1" type="PanelContainer" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer/ring"]
custom_minimum_size = Vector2(193, 241)
layout_mode = 2

[node name="VBC" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer/ring/ring1"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ring_name" type="Label" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer/ring/ring1/VBC"]
layout_mode = 2
text = "天與咒縛"
label_settings = SubResource("LabelSettings_ms247")
horizontal_alignment = 1

[node name="ring_level" type="Label" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer/ring/ring1/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "光環階級：5"
label_settings = SubResource("LabelSettings_nd284")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ring_health" type="Label" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer/ring/ring1/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "生命值：0.5"
label_settings = SubResource("LabelSettings_nd284")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ring_attack_power" type="Label" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer/ring/ring1/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "物理攻擊：0.9"
label_settings = SubResource("LabelSettings_nd284")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ring_magic_power" type="Label" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer/ring/ring1/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "魔法攻擊：-0.9"
label_settings = SubResource("LabelSettings_nd284")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ring_attack_defence" type="Label" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer/ring/ring1/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "物理防禦：0.9"
label_settings = SubResource("LabelSettings_nd284")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ring_magic_defence" type="Label" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/MarginContainer/ring/ring1/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "魔法防禦：-0.9"
label_settings = SubResource("LabelSettings_nd284")
horizontal_alignment = 1
autowrap_mode = 2

[node name="switch_pages" type="MarginContainer" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages"]
custom_minimum_size = Vector2(463, 49)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 53

[node name="previous_page" type="MarginContainer" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2

[node name="previous_page_btn" type="Button" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages/HBoxContainer/previous_page"]
layout_mode = 2
text = "上一頁"

[node name="item_search" type="MarginContainer" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages/HBoxContainer"]
custom_minimum_size = Vector2(220, 49)
layout_mode = 2
size_flags_horizontal = 4

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages/HBoxContainer/item_search"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "搜尋裝備名稱"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true
script = SubResource("GDScript_6vf1o")

[node name="next_page" type="MarginContainer" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2

[node name="next_page_btn" type="Button" parent="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages/HBoxContainer/next_page"]
layout_mode = 2
text = "下一頁"

[node name="Exit" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(162, 142)
layout_mode = 2
offset_left = 1758.0
offset_right = 1920.0
offset_bottom = 142.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60

[node name="Exit_Button" type="Button" parent="Exit"]
layout_mode = 2
theme = SubResource("Theme_nd284")
theme_override_font_sizes/font_size = 36

[connection signal="pressed" from="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages/HBoxContainer/previous_page/previous_page_btn" to="." method="_on_previous_page_btn_pressed"]
[connection signal="text_submitted" from="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages/HBoxContainer/item_search/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ring_list/VBoxContainer/switch_pages/HBoxContainer/next_page/next_page_btn" to="." method="_on_next_page_btn_pressed"]
[connection signal="pressed" from="Exit/Exit_Button" to="." method="_on_exit_button_pressed"]
